welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:128: error: type mismatch;
 found   : Unit
 required: Boolean
}
^